<resources>
    <string name="app_name">VolumeTurningButton</string>

    <string name="fool_tune">傻瓜调音</string>
    <string name="graphics_tune">图形调音</string>
    <string name="professional_tune">专业调音</string>
    <string name="volume_reinforcement">音量强化</string>
    <string name="stereo_enhancement">立体声增强</string>
    <string name="stereo_surround">立体声环绕</string>
    <string name="vibration">震动效果</string>
    <string name="microphone">麦克风</string>
    <string name="child_voice">小孩声</string>
    <string name="oldman_voice">老人声</string>
    <string name="male_voice">男声</string>
    <string name="female_voice">女声</string>
    <string name="overweight_bass">超重低音</string>
    <string name="hight_pitch_permeability">通透高音</string>
    <string name="voice_articulation">清晰人声</string>
    <string name="channel_equalization">声道均衡</string>
</resources>
