<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.qacorn.activity.ButtonInScrollActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="175dp"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">


                <LinearLayout
                    style="@style/main_settings_vertical_LinearLayout"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <com.qacorn.view.VolumeTurningButton
                        android:id="@+id/vibration_switcher"
                        android:layout_width="match_parent"
                        android:layout_height="300dp"
                        android:layout_gravity="center" />

                </LinearLayout>

                <LinearLayout
                    style="@style/main_settings_vertical_LinearLayout"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">


                    <com.qacorn.view.VolumeTurningButton
                        android:id="@+id/stereo_enhancement"
                        android:layout_width="match_parent"
                        android:layout_height="300dp"
                        android:layout_gravity="center" />

                </LinearLayout>

            </LinearLayout>


            <RelativeLayout
                style="@style/custom_frequency_RelativeLayout"
                android:layout_width="match_parent"
                android:layout_height="30dp">

                <TextView
                    style="@style/custom_frequency_RelativeLayout_left_TextView"
                    android:layout_width="wrap_content"

                    android:layout_height="match_parent"
                    android:text="@string/vibration"/>

                <CheckBox
                    android:id="@+id/fragmentFoolTuneFirstCheckBox"
                    style="@style/custom_frequency_RelativeLayout_Right_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:checked="true"

                    />
            </RelativeLayout>


            <SeekBar
                android:id="@+id/fragmentFoolTuneFirstSeekBar"
                style="@style/custom_frequency_seekbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:max="100"
                android:progress="50"
                />

            <RelativeLayout
                style="@style/custom_frequency_RelativeLayout"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="@dimen/margin_xlarge">

                <TextView
                    style="@style/custom_frequency_RelativeLayout_left_TextView"
                    android:layout_width="wrap_content"

                    android:layout_height="match_parent"
                    android:text="@string/microphone"/>

                <CheckBox
                    android:id="@+id/fragmentFoolTuneSecondCheckBox"
                    style="@style/custom_frequency_RelativeLayout_Right_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    />
            </RelativeLayout>

            <SeekBar
                android:id="@+id/fragmentFoolTuneSecondSeekBar"
                style="@style/custom_frequency_seekbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="100"
                android:progress="0"
                />

            <RelativeLayout
                style="@style/custom_frequency_RelativeLayout"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginTop="@dimen/margin_xlarge"
                >

                <TextView
                    style="@style/custom_frequency_RelativeLayout_small_TextView_left"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/child_voice"
                    />

                <TextView
                    style="@style/custom_frequency_RelativeLayout_small_TextView_right"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/oldman_voice"
                    />
            </RelativeLayout>

            <RelativeLayout
                style="@style/custom_frequency_RelativeLayout"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="@dimen/margin_xlarge">

                <TextView
                    style="@style/custom_frequency_RelativeLayout_left_TextView"
                    android:layout_width="wrap_content"

                    android:layout_height="match_parent"
                    android:text="@string/microphone"/>

                <CheckBox
                    android:id="@+id/fragmentFoolTuneThirdCheckBox"
                    style="@style/custom_frequency_RelativeLayout_Right_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    />
            </RelativeLayout>

            <SeekBar
                android:id="@+id/fragmentFoolTuneThirdSeekBar"
                style="@style/custom_frequency_seekbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="100"
                android:progress="0"
                />

            <RelativeLayout
                style="@style/custom_frequency_RelativeLayout"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginTop="@dimen/margin_xlarge"
                >

                <TextView
                    style="@style/custom_frequency_RelativeLayout_small_TextView_left"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/male_voice"
                    />

                <TextView
                    style="@style/custom_frequency_RelativeLayout_small_TextView_right"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/female_voice"
                    />
            </RelativeLayout>

            <TextView
                style="@style/custom_frequency_single_left_TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/overweight_bass"
                />

            <SeekBar
                style="@style/custom_frequency_seekbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="100"
                android:progress="50"
                />

            <TextView
                style="@style/custom_frequency_single_left_TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hight_pitch_permeability"
                />

            <SeekBar
                style="@style/custom_frequency_seekbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:max="100"
                android:progress="50"
                />

            <TextView
                style="@style/custom_frequency_single_left_TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/voice_articulation"
                />

            <SeekBar
                style="@style/custom_frequency_seekbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:max="100"
                android:progress="50"
                />

            <TextView
                style="@style/custom_frequency_single_left_TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/channel_equalization"
                />

            <SeekBar
                style="@style/custom_frequency_seekbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:max="100"
                android:progress="50"
                />

        </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>
